crates/wac-parser/tests/resolution/fail/import-invalid-name.wac
package test:comp;

import x as "NOT-VALID-NAME!": func();
